# simpyssg

./: README.md  pyproject.toml
playground/: pg.py  test.txt
pyssg/src/lexer/: lexer.py
pyssg/src/parser/: parser.py
pyssg/tests/: __init__.py
src/parser/: lexer.py
