[tool.poetry]
name = "pyssg"
version = "0.1.0"
description = "Simple Python-based Static Site generator complete with it's own flavor of markdown"
authors = ["easontek2398 <easontekreviews2398@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
